mpegtsdemux: Free memory behind GString if we don't use it

https://bugzilla.gnome.org/show_bug.cgi?id=700903